# dailbot

./: .gitignore  LICENSE  package-lock.json  package.json  pyproject.toml  webhook.json
dailbot/: main.py  settings.py  utils.py
